Legger til uthenting av oppgitt fravær fra søknad OMS (#3116)
* Legger til uthenting av oppgitt fravær fra søknad OMS

Signed-off-by: s149212 <espen.svendsen@nav.no>

* Bumper skriptnummer (#3117)

* Legger til persistering av oppgitt fravær fra søknad

Signed-off-by: s149212 <espen.svendsen@nav.no>

* Kompileringsfeil

Signed-off-by: s149212 <espen.svendsen@nav.no>

* Fjerner ubrukt klasse

Signed-off-by: s149212 <espen.svendsen@nav.no>

* Orienterer mottak mot MottattDokument. Aggregerer fraværsperioder på søknader.

Signed-off-by: s149212 <espen.svendsen@nav.no>

Co-authored-by: Espen Velsvik <espenjv@users.noreply.github.com>